[package]
name = "empty"
version = "0.0.2"
authors = ["Michael Howell <michael@notriddle.com>"]
description = "The empty list and iterator"
documentation = "https://www.notriddle.com/rustdoc/empty/index.html"
repository = "https://github.com/notriddle/rust-empty"
license = "MIT / Apache-2.0"

[dependencies]
void = "0.0.5"
