[package]
name = "empty"
version = "0.0.4"
authors = ["Michael Howell <michael@notriddle.com>"]
description = "The empty list and iterator"
documentation = "https://www.notriddle.com/rustdoc/empty/index.html"
repository = "https://github.com/notriddle/rust-empty"
license = "MIT / Apache-2.0"

[dependencies]
void = "1.0.2"
